refactor: 将重复的字符串提取为常量，公共的提取到common模块